src/aimooe_pkg/aimooe_sdk/aimooe_sdk/AimPositionAPI.h



/*------------------------------API FUNCTION---------------------------*/

/***********************************************************************/
/**
*	描述：
*		在调用其他函数前，请先调用此函数对API进行初始化。
*	参数：
*		aimHandle:初始化时，初值要赋NULL，每台系统使用一个AimHandle。
*	返回值：
*		无
*************************************************************************/
DLLExport void* Aim_API_Initial();//AimHandle &aimHandle


/************************************************************************/
/**
*	描述：
*		使用所选接口连接设备，各接口可同时使用。
*	参数：
*		interfaceType: 指定所选用的通讯接口。
         o_pospara:  定位仪的型号类别,图像参数
*	返回值：
*		AIMOOE_OK: 函数执行成功。
*		AIMOOE_CONNECT_ERROR : 设备连接失败，请确认设备正常工作。
*		AIMOOE_READ_FAULT : 读设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_WRITE_FAULT : 写设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_ERROR: 未知错误，请确认函数调用正确。
*************************************************************************/
DLLExport E_ReturnValue Aim_ConnectDevice(AimHandle aimHandle, E_Interface interfaceType, T_AIMPOS_DATAPARA &o_pospara);


/***********************************************************************/
/**
*	描述：
*		获取软件版本号。
*	参数：
*		无
*	返回值：
*		无
*************************************************************************/
DLLExport char* Aim_API_GetLibVersion();


/************************************************************************/
/**
*	描述：
*		从硬件系统获取标记点坐标和系统状态信息。
*		本函数在调用前要确保Aim_SetAcquireData()所设置的获取的数据为DT_NONE，系统连接后默认为DT_NONE。
*	参数：
*		interfaceType: 指定所选用的通讯接口。
*		markerSt: 存放回传的三维坐标信息数据。
*		statusSt: 存放回传的系统状态信息数据。
*	返回值：
*		AIMOOE_OK: 函数执行成功。
*		AIMOOE_NOT_CONNECT: 设备未连接，请先连接设备。
*		AIMOOE_READ_FAULT: 读设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_WRITE_FAULT: 写设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_ERROR: 未知错误，请确认函数调用正确。
*  注意：
*      1.本函数在调用前要确保Aim_SetAcquireData()所设置的获取的数据为DT_NONE，系统连接后默认为DT_NONE。
*************************************************************************/
DLLExport E_ReturnValue Aim_GetMarkerAndStatusFromHardware(AimHandle aimHandle, E_Interface interfaceType, T_MarkerInfo & markerSt, T_AimPosStatusInfo& statusSt);


/************************************************************************/
/**
*	描述：
*		从硬件系统获取中间相机彩色图像。
*		本函数在调用前要确保Aim_SetAcquireData()所设置的获取的数据为DT_NONE，系统连接后默认为DT_NONE。
*		本函数仅在USB和以太网通讯下使用。
*	参数：
*		interfaceType: 指定所选用的通讯接口。
*		imageC: 指向存放彩色图像数据的地址，需用户自行定义，图像大小
*		1280*720*2，每个像素2个byte（RGB565，低位在前，高位在后，从高到低
*		为R->G->B），像素刷新方向从左到右，从上到下。
*	返回值：
*		AIMOOE_OK: 函数执行成功。
*		AIMOOE_NOT_CONNECT: 设备未连接，请先连接设备。
*		AIMOOE_READ_FAULT: 读设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_WRITE_FAULT: 写设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_NOT_REFLASH: 若已通过Aim_SetAcquireData函数正确设置定位仪所要获取的数据，则图像数据未更新。
*		AIMOOE_ERROR: 未知错误，请确认函数调用正确。
*  注意：
*      1.本函数在调用前要确保Aim_SetAcquireData()所设置的获取的数据为DT_NONE，系统连接后默认为DT_NONE。
*		2.本函数仅在USB和以太网通讯下有效。
*************************************************************************/
//DLLExport E_ReturnValue Aim_GetColorImageFromHardware(AimHandle aimHandle, E_Interface interfaceType, char* imageC);

/************************************************************************/
/**
*	描述：
*		设置API的内部线程从定位仪获取的数据，在调用以下get函数前，需先调用本函数：
*		Aim_GetMarkerInfo()
*		Aim_GetStatusInfo()
*		Aim_GetGreyImageDual()
*		Aim_GetColorImageMiddle()
*	参数：
*		interfaceType: 指定所选用的通讯接口。
*		dataType: 确定API从所指定的通讯接口读取的数据。
*	返回值：
*		AIMOOE_OK: 函数执行成功。
*		AIMOOE_NOT_CONNECT: 设备未连接，请先连接设备。
*		AIMOOE_ERROR: 未知错误，请确认函数调用正确。
*  注意：
*      1.本函数调用一次后长期有效，当重连系统或出现读写错误时，需要重新调用本函数。
*      2.要确保从定位仪获取的数据包含了所要读取的数据，否则Get函数会返回AIMOOE_NOT_REFLASH的结果。
*      3.此函数不属于记忆类参数设置函数，其设置的值不会保存在定位仪中，重启仪器后会自动恢复默认值DT_NONE。
*************************************************************************/
DLLExport E_ReturnValue Aim_SetAcquireData(AimHandle aimHandle, E_Interface interfaceType, E_DataType dataType);


/************************************************************************/
/**
*	描述：
*		下发定位仪系统指令。
*	参数：
*		interfaceType: 指定所选用的通讯接口。
*		com: 要下发的命令值。
*	返回值：
*		AIMOOE_OK: 函数执行成功。
*		AIMOOE_NOT_CONNECT: 设备未连接，请先连接设备。
*		AIMOOE_WRITE_FAULT : 写设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_ERROR: 未知错误，请确认函数调用正确。
*************************************************************************/
DLLExport E_ReturnValue Aim_SetSystemCommand(AimHandle aimHandle, E_Interface interfaceType, E_SystemCommand com);


/************************************************************************/
/**
*	描述：
*		设置碰撞检测灵敏度，范围：1-10，1灵敏度最高，10灵敏度最低。
*	参数：
*		interfaceType: 指定所选用的通讯接口。
*		level: 灵敏度参数，值越低，越灵敏。
*	返回值：
*		AIMOOE_OK: 函数执行成功。
*		AIMOOE_NOT_CONNECT: 设备未连接，请先连接设备。
*		AIMOOE_WRITE_FAULT: 写设备错误，请重新连接设备或重启设备再试。
*		AIMOOE_ERROR: 未知错误，请确认函数调用正确。
*	注意：
*		1.此函数属于记忆类参数设置函数，其设置的值将保存在定位仪中，下一次开启
*		定位仪时会被沿用。
*		2.由于记忆类参数设置函数需要等待定位仪把数据保存，此类函数被调用后，需
*		要延时0.5s以上，才能再调用下一个记忆类参数设置函数。
*************************************************************************/
DLLExport E_ReturnValue Aim_SetCollisinoDetectLevel(AimHandle aimHandle, E_Interface interfaceType, UCHAR level);


/************************************************************************/
/**
*	描述：
*		设置工具文件的路径，系统会遍历此路径下所有工具文件的信息。
*		调用此函数时，原有的工具文件信息会先自动清除。
*		本函数无需多次调用，建议在调用Aim_ConnectDevice()连接函数后调用一次本函数，即可。
*	参数：
*		path: 路径参数。
*	返回值：
*		AIMOOE_OK: 函数执行成功。
*		AIMOOE_ERROR: 路径为空，或者路径下没有工具文件。
*  注意：
*		在调用本函数时，请勿在其他线程调用与工具相关的函数（如工具查找函数），否则可能会导致代码崩溃！
*************************************************************************/
DLLExport E_ReturnValue Aim_SetToolInfoFilePath(AimHandle aimHandle, char * path);